// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/ProjectOverview/DataSourceCount render data source count and check more data 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              数据源
            </div>
            <span
              class="anticon icon-tip"
              role="img"
            >
              <svg
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                  fill="#EDB054"
                />
              </svg>
            </span>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span>
                查看更多
              </span>
            </button>
          </div>
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="chart-box"
            >
              <div
                data-custom-params="{"data":[{"type":"MySQL","value":1,"category":"health","instanceNames":"mysql-1"},{"type":"MySQL","value":1,"category":"risk","instanceNames":"mysql-2"},{"type":"Redis","value":1,"category":"health","instanceNames":"redis-1"},{"type":"Redis","value":1,"category":"risk","instanceNames":"redis-2"},{"type":"Oracle","value":1,"category":"health","instanceNames":"oracle-1"},{"type":"Oracle","value":1,"category":"risk","instanceNames":"oracle-2"},{"type":"PostgreSQL","value":1,"category":"health","instanceNames":"progres-1"},{"type":"PostgreSQL","value":1,"category":"risk","instanceNames":"progres-2"}],"xField":"type","yField":"value","color":["#7470ED","#EBAD1C"],"minColumnWidth":12,"maxColumnWidth":12,"columnWidthRatio":0.8,"columnStyle":{"radius":[4,4,0,0]},"isGroup":true,"seriesField":"category","xAxis":{"animate":false,"line":null,"label":{"autoEllipsis":true,"autoHide":false,"style":{"fill":"#8a8f99","lineHeight":20,"textAlign":"center","textBaseline":"middle","width":20}}},"yAxis":false,"legend":{"layout":"horizontal","position":"top-left","itemName":{"spacing":8,"style":{"fontSize":12,"lineHeight":20,"fontWeight":"normal","fill":"#8a8f99"}}},"tooltip":{"showMarkers":false,"fields":["type","value"]},"theme":"light"}"
                data-testid="mock-antd-plots"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/DataSourceCount render no data and refresh data source count 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              数据源
            </div>
            <span
              class="anticon icon-tip"
              role="img"
            >
              <svg
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                  fill="#EDB054"
                />
              </svg>
            </span>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span>
                查看更多
              </span>
            </button>
          </div>
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="icon-center-wrapper MuiBox-root css-0"
            >
              <div
                class="ant-empty is-icon-tips css-19kysfv"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    fill="none"
                    height="80"
                    viewBox="0 0 80 80"
                    width="80"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_1412_15009)"
                    >
                      <path
                        d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                        fill="#EBEAE7"
                      />
                      <path
                        d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                        fill="#F2F1EF"
                      />
                      <path
                        d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                        fill="#E6E4E3"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_1412_15009"
                      >
                        <rect
                          fill="white"
                          height="80"
                          width="80"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  <span
                    class="no-data-cont tip-without-title"
                  >
                    暂无数据
                  </span>
                </div>
                <div
                  class="ant-empty-footer"
                >
                  <button
                    class="ant-btn ant-btn-text ant-btn-sm basic-button-wrapper css-1vnelmv"
                    type="button"
                  >
                    <span>
                      刷新
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/DataSourceCount test ToolTipCustomContent 1`] = `<div />`;

exports[`page/ProjectOverview/DataSourceCount test ToolTipCustomContent 2`] = `
<div>
  <div
    class="tooltip-box-wrapper tooltip-box-database-source-order css-4m33fd"
  >
    <header
      class="tooltip-title"
      style="color: rgb(138, 143, 153);"
    >
      <span
        class="dot"
        hidden=""
      />
      数据源
    </header>
    <dl
      class="tooltip-list"
    >
      <dt
        class="tooltip-name"
      >
        <span
          class="dot"
          style="background: rgb(116, 112, 237);"
        />
        健康实例
      </dt>
      <dd
        class="tooltip-value"
      >
        33
      </dd>
    </dl>
    <dl
      class="tooltip-list"
    >
      <dt
        class="tooltip-name"
      >
        <span
          class="dot"
          style="background: rgb(235, 173, 28);"
        />
        风险实例
      </dt>
      <dd
        class="tooltip-value"
      >
        44,444
      </dd>
    </dl>
  </div>
</div>
`;

exports[`page/ProjectOverview/DataSourceCount test formatterLegendItemName 1`] = `"健康实例"`;

exports[`page/ProjectOverview/DataSourceCount test formatterLegendItemName 2`] = `"风险实例"`;

exports[`page/ProjectOverview/DataSourceCount test getLegendMarkerStyle 1`] = `
{
  "style": {
    "fill": "#eee",
    "lineJoin": "round",
    "lineWidth": 4,
    "r": 2,
    "stroke": "#eee",
  },
}
`;

exports[`page/ProjectOverview/DataSourceCount test getLegendMarkerStyle 2`] = `
{
  "style": {
    "fill": "#fff",
    "lineJoin": "round",
    "lineWidth": 4,
    "r": 2,
    "stroke": "#fff",
  },
}
`;
